message signature quick documentation working

--- a/resources/com/sylvanaar/idea/Lua/lang/documentor/MethodSignatureBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/lang/documentor/MethodSignatureBundle.properties
@@ -14,7 +14,8 @@
 #   limitations under the License.
 #
 
-assert = "assert (v [, message])",collectgarbage =collectgarbage (opt [, arg])
+assert = "assert (v [, message])",
+collectgarbage =collectgarbage (opt [, arg])
 dofile =dofile (filename)
 error =error (message [, level])
 _G =(table)
